--- a/webshop.html
+++ b/webshop.html
@@ -115,7 +115,12 @@
 
 
                         <div class="pris"></div>
-
+    <a class="kob" href="mailto:anette@styleeditor.dk?Subject=webshop &body=
+    Hej Style Editor,%0D%0A%0D%0A
+                     %0D%0A%0D%0A
+    jeg kunne godt tænke med at købe (x) antal af (navnet på prodtuktet)%0D%0A%0D%0A
+                  %0D%0A%0D%0A
+     - med venlig hilsen (deres navn)"><button class="kobet">KØB</button></a>
 
                     </article>
                 </template>
