sidste meta description

--- a/ekstraside.html
+++ b/ekstraside.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Style Editors ekstraside er en side til mobilstørrelsen, hvor man kan vælge hvilken kategori man gerne vil læse om, på anette thyrsted portfolio">
 
     <link rel="stylesheet" href="CSS/ekstraside.css" type="text/css">
 
