--- a/footer.html
+++ b/footer.html
@@ -13,9 +13,9 @@
 
 <div class="ikoner">
 
-<a href="#" class="fa fa-linkedin"></a>
-<a href="#" class="fa fa-instagram"></a>
-<a href="#" class="fa fa-pinterest"></a>
+<a href="https://www.linkedin.com/in/anettethyrsted/" target="_blank" class="fa fa-linkedin"></a>
+<a href="https://www.instagram.com/anettetogo/" target="_blank" class="fa fa-instagram"></a>
+<a href="https://www.pinterest.dk/anettethyrsted/" target="_blank" class="fa fa-pinterest"></a>
 </div>
      </div>
 
