--- a/header.html
+++ b/header.html
@@ -31,26 +31,35 @@
 <header class="desktop">
         <!--Navigationsbaren på laptop-->
           <nav class="desktop_nav">
-            <ul>
 
 
-                 <div class="dropdown">
+
+        <div class="dropdown">
+
+              <ul>
+
                <li>PORTFOLIO ↓ </li>
 
-              <div class="dropdown-content">
-    <li><a href="eventstyling.php">Event Styling</a></li>
-    <li> <a href="boligstyling.php">Bolig Styling</a></li>
-  </div>
-</div>
+<li class="dropdown-content">
+    <a href="eventstyling.php">Event Styling</a>
+ <a href="boligstyling.php">Bolig Styling</a>
+</li>
 
-<li><a href="webshop.php">SHOP</a></li>
 
-<a href="index.php"><img class="nav_logo" src="img/logo.png" alt="nav_logo"></a>
 
-<li><a href="om.php">OM STYLE EDITOR</a></li>
 
-<li><a href="kontakt.php"> KONTAKT </a></li>
+<li class="links"><a href="webshop.php">SHOP</a></li>
+
+<li class="billede_li"><a href="index.php"><img class="nav_logo" src="img/logo.png" alt="nav_logo"></a>
+
+<li class="links"><a href="om.php">OM STYLE EDITOR</a></li>
+
+<li class="links"><a href="kontakt.php"> KONTAKT </a></li>
+
             </ul>
+
+
+               </div>
         </nav>
     </header>
 
