--- a/header.html
+++ b/header.html
@@ -1,3 +1,4 @@
+  <link href="CSS/header.css" rel="stylesheet">
 
        <div class="burgermenu">
         <a href="index.php"><img class="nav_burger_logo" src="img/logo.png" alt="nav_logo"></a>
